--- a/app/src/main/res/layout/activity_dark_mode.xml
+++ b/app/src/main/res/layout/activity_dark_mode.xml
@@ -4,27 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity2">
-
-    <SearchView
-        android:layout_centerHorizontal="true"
-        android:layout_width="250dp"
-        android:layout_height="122dp"
-        android:layout_marginTop="0dp"
-        android:queryHint="search here"
-     />
+    tools:context=".DarkModeActivity">
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/DarkButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="100dp"
-        android:layout_marginRight="30dp"
-        android:text="+"
-        />
-
+        android:text="Activate Dark Mode"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        tools:layout_editor_absoluteX="150dp"
+        tools:layout_editor_absoluteY="304dp" />
     <FrameLayout
         android:id="@+id/frame_layout"
         android:layout_width="match_parent"
@@ -40,5 +30,4 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         app:menu="@menu/bottom_nav_menu"/>
-
 </RelativeLayout>
