--- a/app/src/main/res/layout/activity_blut_test_liste.xml
+++ b/app/src/main/res/layout/activity_blut_test_liste.xml
@@ -17,4 +17,19 @@
         android:textSize="20dp"
         tools:layout_editor_absoluteX="21dp"
         tools:layout_editor_absoluteY="18dp" />
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignTop="@+id/bottomnavigationbar"
+        >
+
+    </FrameLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomnavigationbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        app:menu="@menu/bottom_nav_menu"/>
 </RelativeLayout>
