--- a/app/src/main/res/layout/activity_arzt_patient.xml
+++ b/app/src/main/res/layout/activity_arzt_patient.xml
@@ -18,4 +18,20 @@
         android:textSize="20dp"
         tools:layout_editor_absoluteX="33dp"
         tools:layout_editor_absoluteY="23dp" />
+
+    <FrameLayout
+        android:id="@+id/frame_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignTop="@+id/bottomnavigationbar"
+        >
+
+    </FrameLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomnavigationbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        app:menu="@menu/bottom_nav_menu"/>
 </RelativeLayout>
