--- a/app/src/main/res/layout/activity_mrt_test_liste.xml
+++ b/app/src/main/res/layout/activity_mrt_test_liste.xml
@@ -16,4 +16,27 @@
         android:textSize="20dp"
         android:text="MRT-Test Liste" />
 
+    <Button
+        android:id="@+id/viewResult"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/mrttestliste"
+        android:text="MRT-Ergebniss" />
+
+    <FrameLayout
+        android:id="@+id/frame_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignTop="@+id/bottomnavigationbar"
+        >
+
+    </FrameLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomnavigationbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        app:menu="@menu/bottom_nav_menu"/>
+
 </RelativeLayout>
