--- a/app/src/main/res/layout/activity_arzt_patient.xml
+++ b/app/src/main/res/layout/activity_arzt_patient.xml
@@ -5,17 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ArztPatientActivity">
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+    <ListView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Patient list"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="30dp"
-        android:textSize="20dp"
-        tools:layout_editor_absoluteX="33dp"
-        tools:layout_editor_absoluteY="23dp" />
+        android:id="@+id/listview"/>
+
 </RelativeLayout>
+    
