--- a/app/src/main/res/layout/fragment_mrt_result.xml
+++ b/app/src/main/res/layout/fragment_mrt_result.xml
@@ -32,14 +32,14 @@
 
     <ImageButton
         android:id="@+id/revert"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@android:drawable/ic_menu_revert"
+        android:layout_width="43dp"
+        android:layout_height="45dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="50dp"
+        android:layout_marginLeft="39dp"
         android:layout_marginBottom="100dp"
-        android:background="@color/black"/>
+        android:background="@color/black"
+        android:src="@android:drawable/ic_menu_revert" />
 
     <TextView
         android:id="@+id/textView"
