--- a/app/src/main/res/layout/activity_blut_test_liste.xml
+++ b/app/src/main/res/layout/activity_blut_test_liste.xml
@@ -15,8 +15,15 @@
         android:layout_marginLeft="35dp"
         android:text="Blut-Test Liste"
         android:textSize="20dp"
+        android:textStyle="bold"
         tools:layout_editor_absoluteX="21dp"
         tools:layout_editor_absoluteY="18dp" />
+
+    <ListView
+        android:layout_below="@+id/bluttestliste"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/listview"/>
 
     <FrameLayout
         android:layout_width="match_parent"
