--- a/app/src/main/res/layout/activity_dark_mode.xml
+++ b/app/src/main/res/layout/activity_dark_mode.xml
@@ -6,15 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".DarkModeActivity">
 
-    <Button
-        android:id="@+id/DarkButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Activate Dark Mode"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        tools:layout_editor_absoluteX="150dp"
-        tools:layout_editor_absoluteY="304dp" />
+
     <FrameLayout
         android:id="@+id/frame_layout"
         android:layout_width="match_parent"
@@ -30,4 +22,14 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         app:menu="@menu/bottom_nav_menu"/>
+
+    <Switch
+        android:id="@+id/darkSwitch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:height="30dp"
+        android:width="175dp"
+        android:text="Dark Mode" />
 </RelativeLayout>
