--- a/app/src/main/res/layout/fragment_labor_menu.xml
+++ b/app/src/main/res/layout/fragment_labor_menu.xml
@@ -6,6 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".LaborMenu">
 
+    <FrameLayout
+        android:id="@+id/fragmentContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        ></FrameLayout>
+
+
     <Button
         android:id="@+id/MrtTest"
         android:layout_width="wrap_content"
@@ -26,21 +33,6 @@
         android:text="BlutTest"
         tools:layout_editor_absoluteX="170dp"
         tools:layout_editor_absoluteY="266dp" />
-    <FrameLayout
-        android:id="@+id/frame_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignTop="@+id/bottomnavigationbar"
-        >
-
-    </FrameLayout>
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomnavigationbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        app:menu="@menu/bottom_nav_menu"/>
 
 
 
