--- a/app/src/main/res/layout/fragment_verwalter_menu.xml
+++ b/app/src/main/res/layout/fragment_verwalter_menu.xml
@@ -4,7 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity2">
+    tools:context=".VerwalterMenu">
+
+    <FrameLayout
+        android:id="@+id/fragmentContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></FrameLayout>
 
     <SearchView
         android:layout_centerHorizontal="true"
@@ -12,7 +17,7 @@
         android:layout_height="122dp"
         android:layout_marginTop="0dp"
         android:queryHint="search here"
-     />
+        />
 
     <Button
         android:id="@+id/button2"
@@ -33,21 +38,6 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"/>
 
-    <FrameLayout
-        android:id="@+id/frame_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignTop="@+id/bottomnavigationbar"
-        >
-
-    </FrameLayout>
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomnavigationbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        app:menu="@menu/bottom_nav_menu"/>
 
 
 
