--- a/app/src/main/res/layout/activity_patient_data.xml
+++ b/app/src/main/res/layout/activity_patient_data.xml
@@ -126,7 +126,7 @@
         android:inputType="textPersonName"
         android:text="Name" />
 
-    <TextView
+    <EditText
         android:id="@+id/condition"
         android:layout_width="200dp"
         android:layout_height="20dp"
@@ -137,7 +137,7 @@
         android:layout_toEndOf="@id/status"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name" />
+         />
 
     <TextView
         android:id="@+id/note"
